--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     "rich>=13.0.0",
     "Faker>=37.12.0", # Dummy
     "PyYAML>=6.0.0",
+    "python-dotenv>=1.0.0",
     "omegaconf>=2.3.0",
     "huggingface-hub>=0.34.2,<0.36.0",
     "numpy>=1.24.0,<2.3.0",
